@@ -1,26 +1,0 @@
-require 'zlib'
-require 'rubygems/indexer'
-
-# Mixin that provides a +compress+ method for compressing files on disk.
-module Gem::Indexer::Compressor
-
-  # Compress the given file.
-  def compress(filename, ext="rz")
-    zipped = zip File.read(filename)
-    File.open filename + ".#{ext}", "wb" do |file|
-      file.write zipped
-    end
-  end
-
-  # Return a compressed version of the given string.
-  def zip(string)
-    Zlib::Deflate.deflate(string)
-  end
-
-  # Return an uncompressed version of a compressed string.
-  def unzip(string)
-    Zlib::Inflate.inflate(string)
-  end
-
-end
-
